manifests-failed/phpipam-1.0.3.tgz-manifest.yaml
---
# Source: phpipam/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: phpipam-db
  namespace: phpipam-1.0.3.tgz
  labels:
    app: phpipam
    component: mysql
spec:
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: phpipam
    component: mysql
---
# Source: phpipam/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: phpipam-web
  namespace: phpipam-1.0.3.tgz
  labels:
    app: phpipam
    component: web
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: phpipam
    component: web
---
# Source: phpipam/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: phpipam-web
  namespace: phpipam-1.0.3.tgz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpipam
      component: web
  template:
    metadata:
      name: phpipam-web
      namespace: phpipam-1.0.3.tgz
      labels:
        app: phpipam
        component: web
    spec:
      containers:
        - name: phpipam-web
          image: "phpipam/phpipam-www:v1.5.2"
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 50m
              memory: 32Mi
---
# Source: phpipam/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: phpipam-cron
  namespace: phpipam-1.0.3.tgz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpipam
      component: cron
  template:
    metadata:
      name: phpipam-cron
      labels:
        app: phpipam
        component: cron
    spec:
      containers:
        - name: phpipam-cron
          image: "phpipam/phpipam-cron:v1.5.2"
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 50m
              memory: 32Mi
---
# Source: phpipam/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: phpipam-db
  namespace: phpipam-1.0.3.tgz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpipam
      component: mysql
  template:
    metadata:
      name: phpipam-db
      labels:
        app: phpipam
        component: mysql
    spec:
      containers:
        - name: phpipam-db
          image: "mariadb:10.11.2"
          ports:
            - containerPort: 3306
              protocol: TCP
              name: mysql
          volumeMounts:
            - name: phpipam-mysql
              mountPath: /var/lib/mysql
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 50m
              memory: 128Mi
      volumes:
        - name: phpipam-mysql
          persistentVolumeClaim:
            claimName: phpipam-mysql
---
# Source: phpipam/templates/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: phpipam-web
  namespace: phpipam-1.0.3.tgz
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    
spec:
  tls:
    - hosts:
        - chart-example.local
      secretName: "my-release-phpipam-cert"
  ingressClassName: nginx
  rules:
    - host: chart-example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpipam-web
                port:
                  number: 80
